# FastAPI_Template

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py  user.py
app/core/: config.py  exceptions.py  kafka.py  redis.py  security.py
app/db/: session.py
app/db/models/: user.py
app/dependencies/: auth.py  common.py  kafka.py  redis.py
app/events/: __init__.py  producer.py  schemas.py  topics.py
app/repositories/: interfaces.py  user_repository.py
app/schemas/: pagination.py  user.py
app/services/: auth_service.py  user_service.py
app/utils/: redis_cache.py
tests/: conftest.py  test_health.py
